# offline-telemetry-systems

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/common/src/: message.rs
crates/device/: Cargo.toml
crates/device/src/: main.rs  metrics.rs  mod.rs  retry.rs  sender.rs
crates/device/src/queue/: disk.rs  memory.rs  mod.rs
crates/ingestion-server/: Cargo.toml
crates/ingestion-server/src/: dedup.rs  main.rs  server.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: decoder.rs  encoder.rs
crates/transport/: Cargo.toml
crates/transport/src/tcp/: client.rs  connection.rs
scripts/: pre-commit.sh  setup-hooks.sh  start.sh
