[workspace]
members = [
    "crates/common",
    "crates/protocol",
    "crates/transport",
    "crates/device",
    "crates/ingestion-server"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

