[package]
name = "ingestion-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "5"

common = { path = "../common" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }